# automatica2014

./: README.md  rosinstall  scenario.rosinstall  sia10f.rosinstall  ur5.rosinstall
automatica2014_bringup/: CMakeLists.txt  env.sh  package.xml
automatica2014_bringup/config/: command_gui_buttons.yaml  gripper_joint_configurations.yaml  joint_names_sia10f.yaml  pg70.yaml  pg70_canopen.yaml  pg70_joint_configurations.yaml  push_buttons.yaml  scenario.rviz
automatica2014_bringup/launch/: all.launch  dashboard.launch  push_buttons.launch  rviz_scenario.launch  rviz_sia10f.launch  rviz_ur5.launch  scenario.launch  sia10f.launch  ur5.launch
automatica2014_buttons/: CMakeLists.txt  package.xml
automatica2014_buttons/src/: phidgets_push_buttons.cpp
automatica2014_description/: CMakeLists.txt  package.xml
automatica2014_description/meshes/: cell_col.stl  finger_left.stl  finger_left_lacquey.stl  finger_right.stl  finger_right_lacquey.stl  flange.stl  gripper.stl  gripper_base_lacquey.stl
automatica2014_description/meshes/Lacquey/: finger_left_lacquey.dae  finger_left_lacquey.stl  finger_left_lacquey_coll.STL  finger_left_lacquey_coll.stl  finger_right_lacquey.dae  finger_right_lacquey.stl  finger_right_lacquey_coll.STL  finger_right_lacquey_coll.stl  gripper_base_lacquey.dae  gripper_base_lacquey.stl  gripper_base_lacquey_coll.STL  gripper_base_lacquey_coll.stl
automatica2014_description/meshes/Schunk/: finger.stl  finger_col.stl  finger_left_schunk.stl  finger_right_schunk.stl  gripper_schunk.dae
automatica2014_description/urdf/: PGplus70.urdf.xacro  cell.urdf.xacro  gripper.urdf.xacro  lacquey.urdf.xacro  sia10f.urdf.xacro  ur5.urdf.xacro  workspace.urdf.xacro
automatica2014_lacquey_gripper/: CMakeLists.txt  package.xml
automatica2014_lacquey_gripper/src/: fake_joint_lacquey.py  gripper_driver.py
automatica2014_led/: CMakeLists.txt  package.xml
automatica2014_led/src/: led_control.py
automatica2014_object_filter/: CMakeLists.txt  Readme.md  mainpage.dox  manifest.xml  package.xml
automatica2014_object_filter/launch/: bringup_perception.launch  calibration.launch  filter.launch  qppf1_automatica14.launch  shape_visualization.launch
automatica2014_object_filter/launch_camera/: openni2.launch  openni2_depth_only.launch  openni2_pointcloud.launch
automatica2014_object_filter/launch_camera/includes/: pointclouds.launch  processing.launch  processing_depth_only.launch  processing_pointcloud.launch
automatica2014_object_filter/src/: calibration.py  filter.cpp
automatica2014_pg70_fake_joint/: CMakeLists.txt  package.xml
automatica2014_pg70_fake_joint/src/: auto_init.py  fake_joint.py  fake_joint_lacquey.py
automatica2014_scenario/: CMakeLists.txt  package.xml  setup.py
automatica2014_scenario/src/automatica2014_scenario/: mode_switch.py  pick_place.py  scenario.py
automatica2014_sia10f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
automatica2014_sia10f_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sensors_kinect.yaml  sia10f.srdf
automatica2014_sia10f_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sia10f_moveit_controller_manager.launch.xml  sia10f_moveit_sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
automatica2014_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
automatica2014_ur5_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  sensors_kinect.yaml  ur5.srdf
automatica2014_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  ur5_moveit_sensor_manager.launch.xml  warehouse.launch
automatica2014_visualization/: CMakeLists.txt  package.xml
automatica2014_visualization/src/: visualization.py
cob_trajectory_controller/ros/src/: cob_trajectory_controller.cpp
ipa_scenario_automatica14/: manifest.xml
ipa_scenario_automatica14/launch/: filter.launch
ipa_scenario_automatica14/src/: filter.cpp
